# rust-auth

./: Cargo.toml  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
migrations/: 20240720150006_create_users_table.sql  20240720175230_add_password_hash.sql  20240720200701_create_products_table.sql  20240720200731_create_product_bundles_table.sql  20240720200801_create_bundle_products_table.sql
src/: main.rs  templates.rs
src/config/: app_config.rs
src/db/: connection.rs
src/error/: app_error.rs
src/handlers/: auth.rs  mod.rs  product.rs  user.rs
src/models/: auth.rs  mod.rs  product.rs  user.rs
src/repositories/: mod.rs  product_repository.rs  user_repository.rs
src/routes/: api_v1.rs  mod.rs
src/services/: auth_service.rs  mod.rs  oauth_service.rs  product_service.rs  siwe_service.rs  user_service.rs
static/: styles.css
templates/: base.html  login.html  product_bundles.html  products.html  register.html  users.html
templates/bundles/: detail.html  form.html  list.html
templates/products/: detail.html  form.html  list.html
